--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
+# packer section
+packer/variables.json
+packer/config.pkr.hcl
+
 *.tfstate
 *.tfstate.*.backup
 *.tfstate.backup
 *.tfvars
-.terraform/
+.terraform
+/terraform/.terraform.lock.hcl
