--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,9 +1,9 @@
-cloud_id                 = "b1b1b1b1b1b1b1b1b1b1"
-folder_id                = "b1b1b1b1b1b1b1b1b1b1"
-zone                     = "ru-central1-a"
-image_id                 = "fd8d8d8d8d8d8d8d8d8d"
-public_key_path          = "/home/user/.ssh/id_ed25519.pub"
-private_key_path         = "/home/user/.ssh/id_ed25519"
-subnet_id                = "e9e9e9e9e9e9e9e9e9e9"
-service_account_key_file = "/home/user/key.json"
+cloud_id                 = "b1g75uge12b4dnqbk3f6"
+folder_id                = "b1gjmdta5qarrmg8d8ur"
+zone                     = "ru-central1-c"
+image_id                 = "fd82pm0ddtr6jdi9lrk1"
+public_key_path          = "C:/Users/AntBtk/.ssh/id_ed25519.pub"
+private_key_path         = "C:/Users/AntBtk/.ssh/id_ed25519"
+subnet_id                = "b0c0huteufse46r90kpi"
+service_account_key_file = "C:/Users/AntBtk/otus_devops/gitdz/key.json"
 instances_count          = 2
