--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -7,3 +7,4 @@ private_key_path         = "C:/Users/AntBtk/.ssh/id_ed25519"
 subnet_id                = "b0c0huteufse46r90kpi"
 service_account_key_file = "C:/Users/AntBtk/otus_devops/gitdz/key.json"
 instances_count          = 2
+name                     = "SA name"
