--- a/packer/app.json
+++ b/packer/app.json
@@ -14,11 +14,10 @@
       "use_ipv4_nat": "true"
     }
   ],
-  "provisioners": [
-    {
-      "type": "shell",
-      "script": "scripts/install_ruby.sh",
-      "execute_command": "sudo {{.Path}}"
-    }
-  ]
+"provisioners": [
+ {
+ "type": "ansible",
+ "playbook_file": "ansible/packer_app.yml"
+ }
+]
 }
