--- a/ansible/packer_app.yml
+++ b/ansible/packer_app.yml
@@ -1,12 +1,21 @@
 ---
-- name: Install Ruby && Bundler
-  hosts: all
-  become: true
+- hosts: all
   tasks:
+    - name: Update and upgrade apt packages
+      become: true
+      become_method: sudo
+      become_user: root  
+      apt:
+        upgrade: yes
+        update_cache: yes
+        cache_valid_time: 86400 #One day
   # Установим в цикле все зависимости
-  - name: Install ruby and rubygems and required packages
-    apt: "name={{ item }} state=present"
-    with_items:
-      - ruby-full
-      - ruby-bundler
-      - build-essential
+    - name: Install ruby and rubygems and required packages
+      become: true
+      become_method: sudo
+      become_user: root  
+      apt: "name={{ item }} state=present"
+      with_items:
+        - ruby-full
+        - ruby-bundler
+        - build-essential
