--- a/packer/app.json
+++ b/packer/app.json
@@ -2,7 +2,7 @@
   "builders": [
     {
       "type": "yandex",
-      "service_account_key_file":  "/key.json.example",
+      "service_account_key_file":  "packer/key.json.example",
       "folder_id": "b1gjmdta5qarrmg8d8ur",
       "source_image_family": "ubuntu-1604-lts",
       "image_name": "reddit-app-base",
@@ -17,7 +17,7 @@
 "provisioners": [
  {
  "type": "ansible",
- "playbook_file": "../ansible/packer_app.yml"
+ "playbook_file": "ansible/packer_app.yml"
  }
 ]
 }
