--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,14 @@
 [defaults]
-inventory = ./inventory
+inventory = ./environments/stage/inventory # Inventory по-умолчанию задается здесь
 remote_user = ubuntu
 private_key_file = ~/.ssh/id_ed25519.txt
+# Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
 host_key_checking = False
+# Отключим создание *.retry-файлов (они нечасто нужны, но мешаются под руками)
 retry_files_enabled = False
+# # Явно укажем расположение ролей (можно задать несколько путей через ; )
+roles_path = ./roles
+[diff]
+# Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
+always = True
+context = 5
